--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <HTML>
 <head>
 <title>Premium Reselling</title>
-  
+
+
+<style>
+  html, body {
+    background: #212121;
+  }
+  h1 {}
+</style>
 </head>
 <body>
 
-
+<h1>Get Started...</h1>
 
   
 </body></HTML>
